[package]
name = "actix-graphql"
version = "0.1.0"
authors = ["sternelee <sternelee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1.1.0"
async-graphql = "2.5.6"
async-graphql-actix-web = "2.5.6"
slab = "0.4.2"
futures = "0.3.0"