[package]
name = "crypto-gcid"
version = "0.1.0"
authors = ["sternelee <sternelee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha-1 = "0.9.4"
wasm-bindgen = "=0.2.61"

# new material
[lib]
crate-type = ["cdylib"]
